tests/custom-sysy2022/positive/c067_lib_getint.sy
int main() {
  int a = getint();
  int b = getint();
  putint(a * 2 + b);
  putch(10);
  return 0;
}
