tests/custom-sysy2022/negative/c100_neg_lex_04.sy
int main() {
  int a = 1;
  /* unterminated comment
  return a;
}
